# ProjetoFinal

./: README.txt  base_link.dae  cam_link.dae  wheel_br.dae  wheel_fr.dae
Mapas/Larangeira/: corredor.dae  multi-terreno.dae
Mundos/: mundotijolo.world
Objetos_Robo/: wheel_bl.dae
Partes_veiculo_individual/: base_link.dae  cam_link.dae  lidar_link.dae
articubot_ws/: .data
flask_nav2_web/: Instrucoes.txt  app.py  save1ser.data  send_goal.py
roboauto/: CMakeLists.txt
veiculo_terrestre/: CMakeLists.txt  package.xml
veiculo_terrestre/install/: local_setup.sh  setup.sh
veiculo_terrestre/install/veiculo_terrestre/share/ament_index/resource_index/package_run_dependencies/: veiculo_terrestre
veiculo_terrestre/install/veiculo_terrestre/share/veiculo_terrestre/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
veiculo_terrestre/install/veiculo_terrestre/share/veiculo_terrestre/meshes/: robo_stl.stl
veiculo_terrestre/install/veiculo_terrestre/share/veiculo_terrestre/urdf/: veiculo.urdf
veiculo_terrestre/log/: latest_build
veiculo_terrestre/maps/: novomundo.world  robo_camuflado.world
veiculo_terrestre/meshes/: .robo.dae.swp  corredot_stl.stl
veiculo_terrestre/meshes/Corredor/: model.config  model.sdf
veiculo_terrestre/meshes/Corredor/media/: corredor.dae  novo_corredor.dae
veiculo_terrestre/meshes/NOVO_ROBO/: wheel_fl.dae
veiculo_terrestre/meshes/novo_robot/: model.config  model.sdf  robo_camuflado.dae
veiculo_terrestre/urdf/: meu_mundo.sdf  meu_mundo.urdf  meu_mundo_com_robot.sdf  veiculo_terrestre.sdf  veiculo_terrestre.urdf
(+234 files in other folders)
