<?xml version="1.0"?>
<package format="3">
  <name>veiculo_terrestre</name>
  <version>0.0.1</version>
  <description>Veículo terrestre com descrição URDF e malhas 3D para simulação.</description>
  <maintainer email="110482980+aspaceusername@users.noreply.github.com">ruben</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependências de execução -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>urdf</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
